<h5>1.2.0 RC1</h5>  [2021/04/19]
<hr>
 - semantic versioning (mamba/goffy)
 - code cleaning (PS inspect code) (goffy)
 - added new update procedure (goffy)
 - updated viewerjs to last version (goffy)
 - added chmod in install/update (cesagonchu/goffy)
 - hide download button when album is empty (cesagonchu/goffy)
 - fixed bug with download zip (cesagonchu/goffy)
 - adapted update due to new semantic versioning (goffy)
 - updated viewerjs (goffy)
 - fixed bug in MigrateHelper (goffy)

<h5>1.15 RC2</h5>  [2021/04/19]
<hr>
 - added function qualifiers (goffy)
 - added single upload (liomj/goffy)
 - added batch upload (goffy)
 - added clone feature (goffy)
 - added extension check (gd and exif) in maintenance (goffy)

<h5>1.15 RC1</h5>  [2020/09/15]
<hr>
 - added album list to index page (wdc/goffy)
 - fixed bug in blocks (heyula/goffy)
 - added defaults for tpl vars (goffy)
 - replaced index.html by index.php (goffy)

<h5>1.14 Final</h5>  [2020/07/01]
<hr>
 - moved to final (goffy)
 
<h5>1.14 RC2</h5>  [2019/12/23]
<hr>
 - fixed missing check of allowed resolution (goffy)
 - added DirectoryChecker and other new common classes (mamba)
 - code checking and cosmetics (mamba)
 - fixed problems with array to string conversion (goffy)
 - added default permissions for creation of albums (goffy)
 - applied XMF code styling - grouppermHandler (mamba/goffy)
 - use coded name for file name of original image (lupin/goffy)
 - added all exif data as array to image object (lupin/goffy)
 - added notification for comments (lupin/goffy)
 - fixed bug with notification include (lupin/goffy)
 - added notification for comments on image level (lupin/goffy)
 - changed redir after notification update (lupin/goffy)
 - updated italian language (lupin/goffy)
 - fixed bug with deleting images (lupin/goffy)
 - fixed bug in comment notification (lupin/goffy)
 - added new permission to use album collections (lupin/goffy)
 - removed user select of album creator on user side (lupin/goffy)